[gd_scene load_steps=15 format=3 uid="uid://dminbsq6ueylt"]

[ext_resource type="Script" path="res://世界/Snow/magic_zheng.gd" id="1_in7qb"]
[ext_resource type="Texture2D" uid="uid://d38ptyvwldqly" path="res://Items/AB1D2D05294D418C8CC2010ADCC5B6FB.png" id="1_re1n4"]
[ext_resource type="Texture2D" uid="uid://kw0llmi54tlu" path="res://Items/7B9C8E7FED7B5DB124DCB13D8B099DD4.png" id="2_1t6k3"]
[ext_resource type="Texture2D" uid="uid://dec3bjmsmi3ta" path="res://Items/0565A683D92B1900A17DE8B139EB2A75.png" id="3_rvylq"]
[ext_resource type="PackedScene" uid="uid://2rmdh85t82oq" path="res://hitboxes_hurtboxes/hurtbox.tscn" id="3_uepqe"]
[ext_resource type="PackedScene" uid="uid://b32v7pmlkhl8f" path="res://属性/stats.tscn" id="5_j0rpx"]

[sub_resource type="Animation" id="Animation_7ccsl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MagicHurt:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource( "3_rvylq" )]
}

[sub_resource type="Animation" id="Animation_x2bjw"]
resource_name = "magichurt"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MagicHurt:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource( "3_rvylq" )]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.45),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hurt_ani_end"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3bgq3"]
_data = {
"RESET": SubResource( "Animation_7ccsl" ),
"magichurt": SubResource( "Animation_x2bjw" )
}

[sub_resource type="Animation" id="Animation_a33h4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zhuan:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Zhuan:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.20944]
}

[sub_resource type="Animation" id="Animation_kdplu"]
resource_name = "zhuan"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Zhuan:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Zhuan:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.314159, 0.0, 0.314159, 0.0, 0.314159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7gqgv"]
_data = {
"RESET": SubResource( "Animation_a33h4" ),
"zhuan": SubResource( "Animation_kdplu" )
}

[sub_resource type="CircleShape2D" id="CircleShape2D_v1q6w"]
radius = 83.0542

[sub_resource type="CircleShape2D" id="CircleShape2D_bga3x"]
radius = 40.1995

[node name="MagicZheng" type="Node2D"]
script = ExtResource( "1_in7qb" )

[node name="Magic" type="Sprite2D" parent="."]
position = Vector2(-5.05386, 30.3159)
skew = 0.20944
texture = ExtResource( "1_re1n4" )

[node name="MagicHurt" type="Sprite2D" parent="."]
position = Vector2(-5.054, 30.316)
skew = 0.20944
texture = ExtResource( "3_rvylq" )

[node name="Zhuan" type="Sprite2D" parent="."]
position = Vector2(-5.05386, 30.3159)
scale = Vector2(1.7, 1.79717)
skew = 0.20944
texture = ExtResource( "2_1t6k3" )

[node name="MagicHurtAni" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource( "AnimationLibrary_3bgq3" )
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "zhuan"
libraries = {
"": SubResource( "AnimationLibrary_7gqgv" )
}

[node name="PlayerOn" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerOn"]
position = Vector2(-3, 33)
shape = SubResource( "CircleShape2D_v1q6w" )

[node name="hurtbox" parent="." instance=ExtResource( "3_uepqe" )]
collision_mask = 8

[node name="CollisionShape2D" parent="hurtbox" index="0"]
modulate = Color(0.576471, 1, 0.227451, 1)
position = Vector2(-3, 33)
shape = SubResource( "CircleShape2D_bga3x" )

[node name="Stats" parent="." instance=ExtResource( "5_j0rpx" )]
max_health = 10

[connection signal="body_entered" from="PlayerOn" to="." method="_on_player_on_body_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="hurtbox"]
